*mesa-20.0.8-r1
::bobwya				extend python support
::musl					add musl workaround
::oiledmachine-overlay	base ebuild
::poly-c				add zink support
::prototype99			improve python use flags, remove 9999 specific code