@@ -139,6 +139,7 @@
 =media-libs/fontconfig-ultimate-2016.04.23
 =media-libs/harfbuzz-2.7.2 ~amd64
 =media-libs/libuninameslist-20200313
+=media-libs/mesa-20.2.0
 =media-libs/SoQt-1.6.0a_pre20181221
 =media-sound/pulseaudio-13.99.1
 =media-video/ffmpeg-4.3
